<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView1" android:text="@string/rate_label"
		android:paddingLeft="5dp" />

	<EditText android:layout_height="wrap_content" android:id="@+id/editText1"
		android:layout_width="180dp" android:inputType="numberDecimal" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView2" android:text="@string/final_label"
		android:paddingLeft="5dp" />

	<EditText android:layout_height="wrap_content" android:id="@+id/editText2"
		android:inputType="numberDecimal" android:layout_width="180dp" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView3" android:text="@string/price_label"
		android:paddingLeft="5dp" />

	<EditText android:id="@+id/editText3" android:inputType="numberDecimal"
		android:layout_width="180dp" android:focusable="false"
		android:layout_height="wrap_content" />

	<TextView android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView4"
		android:layout_width="fill_parent" android:text="@string/hint_label"
		android:paddingLeft="5dp" android:layout_weight="1.01" />
	<Button android:text="@string/calc_label" android:id="@+id/button1"
		android:layout_width="113dp" android:textSize="20sp"
		android:layout_height="wrap_content" android:layout_gravity="right" />
</LinearLayout>
